--- a/src/components/Productlisten.astro
+++ b/src/components/Productlisten.astro
@@ -17,7 +17,14 @@
                         </time>
         </div>
         <h3 class="newsList_title c-newsList_title">
-         キーケース        </h3>
+          - 100% handcrafted by a single craftsman<br class="pc"><br class="sp">
+          - Hand Stitched with traditional methods<br class="pc"><br class="sp">
+          - Full grain Italian leather.<br class="pc"><br class="sp">
+          - 1 interior card slots which hold 3 cards. <br class="pc"><br class="sp">
+          - Hook with Amiet, made in Switzerland<br class="pc"><br class="sp">
+          - YKK zippers , made in Japan<br class="pc"><br class="sp">     
+
+        </h3>
       </div>
       <div class="newsList_img c-newsList_img">
         <img src="/keycasebody.webp">
@@ -36,7 +43,13 @@
                        </time>
         </div>
         <h3 class="newsList_title c-newsList_title">
-             ミニマムウォレット       </h3>
+          - 100% handcrafted by a single craftsman<br class="pc"><br class="sp">
+          - Hand Stitched with traditional methods<br class="pc"><br class="sp">
+          - Full grain Italian leather<br class="pc"><br class="sp">
+          - 2 Card Pockets (holds 2-3 cards each)<br class="pc"><br class="sp">
+          - A pocket specifically for coins in the center <br class="pc"><br class="sp">
+          - Two open pockets<br class="pc"><br class="sp">
+          - YKK zippers , made in Japan<br class="pc"><br class="sp"> </h3>
       </div>
       <div class="newsList_img c-newsList_img">
         <img src="/roundbody.webp">
@@ -55,7 +68,12 @@
                        </time>
         </div>
         <h3 class="newsList_title c-newsList_title">
-               キーケース<br class="sp">(&thinsp;フックタイプ&thinsp;)   </h3>
+          - 100% handcrafted by a single craftsman<br class="pc"><br class="sp">
+          - Hand Stitched with traditional methods<br class="pc"><br class="sp">
+          - Full grain Italian leather<br class="pc"><br class="sp">
+          - 1 Card Pocket (holds 2 cards)<br class="pc"><br class="sp">
+          - Brass grommet<br class="pc"><br class="sp">
+          - Hook with Amiet, made in Switzerland<br class="pc"><br class="sp"> </h3>
       </div>
       <div class="newsList_img c-newsList_img">
         <img src="/jeafiee.webp">
@@ -73,7 +91,13 @@
                      </time>
         </div>
         <h3 class="newsList_title c-newsList_title">
-          ３つ折り財布         </h3>
+          - 100% handcrafted by a single craftsman<br class="pc"><br class="sp">
+          - Hand Stitched with traditional methods<br class="pc"><br class="sp">
+          - Full grain Italian leather<br class="pc"><br class="sp">
+          - 3 Card Pockets (holds 1 cards each)<br class="pc"><br class="sp">
+          - A box-shaped coin purse (with a card pocket on the back, can hold 2,3 cards inside)<br class="pc"><br class="sp">
+          - 1 exterior bill slots which holds multiple bills<br class="pc"><br class="sp">
+        </h3>
       </div>
       <div class="newsList_img c-newsList_img">
         <img src="/three1.webp">
@@ -90,14 +114,21 @@
                      </time>
         </div>
         <h3 class="newsList_title c-newsList_title">
-         スマートキーウォレット       </h3>
+          - 100% handcrafted by a single craftsman<br class="pc"><br class="sp">
+          - Hand Stitched with traditional methods<br class="pc"><br class="sp">
+          - Full grain Italian leather.<br class="pc"><br class="sp">
+          - 1 interior card slots which hold 3 cards<br class="pc"><br class="sp">
+          - Hook with Amiet, made in Switzerland<br class="pc"><br class="sp">
+          - Two pockets for smart/intelligent keys<br class="pc"><br class="sp">
+          - YKK zippers , made in Japan<br class="pc"><br class="sp">   
+        </h3>
       </div>
       <div class="newsList_img c-newsList_img">
         <img src="/smartmain.webp">
       </div>
     </a>
   </li>
-      <li class="newsList_node c-newsList_node">
+  <li class="newsList_node c-newsList_node">
     <a href="/smallwallet">
       <div class="c-newsList_columnLeft">
         <div class="newsList_info c-newsList_info">
@@ -107,10 +138,37 @@
                       </time>
         </div>
         <h3 class="newsList_title c-newsList_title">
-          ミニマムウォレット Type2       </h3>
+          - 100% handcrafted by a single craftsman<br class="pc"><br class="sp">
+          - Hand Stitched with traditional methods<br class="pc"><br class="sp">
+          - Full grain Italian leather.<br class="pc"><br class="sp">
+          - 5 Card Pockets (holds 1 cards each)<br class="pc"><br class="sp">
+          - A box-shaped coin purse (with a 1 card pocket on the back)<br class="pc"><br class="sp">
+          - 1 exterior bill slots which holds multiple bills<br class="pc"><br class="sp">   </h3>
       </div>
       <div class="newsList_img c-newsList_img">
-        <img src="/round2.webp">
+        <img src="/threewallet1-min.webp">
+      </div>
+    </a>
+  </li>
+  
+  <li class="newsList_node c-newsList_node">
+    <a href="/note">
+      <div class="c-newsList_columnLeft">
+        <div class="newsList_info c-newsList_info">
+          <div class="newsList_category c-newsList_category">
+            STATIONERY             </div>
+          <time class="newsList_date c-newsList_date">
+                       </time>
+        </div>
+        <h3 class="newsList_title c-newsList_title">
+          - 100% handcrafted by a single craftsman<br class="pc"><br class="sp">
+          - Hand Stitched with traditional methods<br class="pc"><br class="sp">
+          - Full grain Italian leather.<br class="pc"><br class="sp">
+          - Includes 1 RHODIA note <br class="pc"><br class="sp">
+         </h3>
+      </div>
+      <div class="newsList_img c-newsList_img">
+        <img src="/notekore.webp">
       </div>
     </a>
   </li>
@@ -124,31 +182,61 @@
                       </time>
         </div>
         <h3 class="newsList_title c-newsList_title">
-          ミニマムウォレット           </h3>
+          - 100% handcrafted by a single craftsman<br class="pc"><br class="sp">
+          - Hand Stitched with traditional methods<br class="pc"><br class="sp">
+          - Full grain Italian leather.<br class="pc"><br class="sp">
+          - One open pocket<br class="pc"><br class="sp">
+          - 1 exterior card pocket which hold 1 cards <br class="pc"><br class="sp">
+        </h3>
       </div>
       <div class="newsList_img c-newsList_img">
         <img src="/mninibody.webp">
       </div>
     </a>
   </li>
-      <li class="newsList_node c-newsList_node">
-    <a href="/">
+  
+  
+  <li class="newsList_node c-newsList_node">
+    <a href="/foldwallet">
       <div class="c-newsList_columnLeft">
         <div class="newsList_info c-newsList_info">
           <div class="newsList_category c-newsList_category">
-            MIDDLEWALLET             </div>
+         WALLET             </div>
           <time class="newsList_date c-newsList_date">
                        </time>
         </div>
         <h3 class="newsList_title c-newsList_title">
-          ミドルウォレット            </h3>
+          - 100% handcrafted by a single craftsman<br class="pc"><br class="sp">
+          - Hand Stitched with traditional methods<br class="pc"><br class="sp">
+          - Full grain Italian leather.<br class="pc"><br class="sp">          </h3>
       </div>
       <div class="newsList_img c-newsList_img">
-        <img src="/coming.webp">
+        <img src="/wallt.webp">
       </div>
     </a>
   </li>
   
+  
+  <li class="newsList_node c-newsList_node">
+    <a href="/walletfasner">
+      <div class="c-newsList_columnLeft">
+        <div class="newsList_info c-newsList_info">
+          <div class="newsList_category c-newsList_category">
+           WALLET            </div>
+          <time class="newsList_date c-newsList_date">
+                       </time>
+        </div>
+        <h3 class="newsList_title c-newsList_title">
+          - 100% handcrafted by a single craftsman<br class="pc"><br class="sp">
+          - Hand Stitched with traditional methods<br class="pc"><br class="sp">
+          - Full grain Italian leather.<br class="pc"><br class="sp">
+        </h3>
+      </div>
+      <div class="newsList_img c-newsList_img">
+        <img src="/pink1.webp">
+      </div>
+    </a>
+  </li>
   
   
 
@@ -171,7 +259,7 @@
 .c-singlePager {
     position: relative;
     font-size: 20px;
-    font-family: 'Shippori Mincho', sans-serif;
+    font-family: 'Open Sans Variable', sans-serif;
     margin: 50px 40px 80px;
     padding: 0 0 10px;
 }
@@ -196,7 +284,6 @@
     display: -ms-flexbox;
     display: flex;
     margin: 0 40px;
-   
     justify-content: center;
 }
 
@@ -205,6 +292,7 @@
     width: 66.6666%;
     width: 66.6666666667%;
     border-top: 1px solid #BEBEBE;
+    
 }
 
 ul, ol {
@@ -219,10 +307,6 @@ ul, ol {
 }
 
 
-a {
-    text-decoration: none;
-    color: inherit;
-}
 
 a {
     background-color: transparent;
@@ -265,24 +349,26 @@ a {
 }
 
 .c-newsList_category {
-    font-family: 'Shippori Mincho', sans-serif;
+  font-family: 'Open Sans Variable', sans-serif;
     font-size: 1rem;
     margin: 0 0 10px;
 }
 
 .c-newsList_date {
-    font-family: 'Shippori Mincho', sans-serif;
+  font-family: 'Open Sans Variable', sans-serif;
     font-size: 1rem;
     color: #838383;
 }
 
 .c-newsList_title {
     position: relative;
-    font-size: 0.9rem;
-    line-height: 1.5;
+    font-size: 0.95rem;
+       line-height: 1.65em;  
+   letter-spacing: .085px;  
+   font-family: 'Open Sans Variable', sans-serif;
     width: 78%;
     word-break: break-all;
-    font-family: 'Shippori Mincho', sans-serif;
+
 
 }
 
@@ -386,8 +472,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .c-newsList_category {
-    font-family: 'Shippori Mincho', sans-serif;
-  font-size: 14px;
+  font-family: 'Open Sans Variable', sans-serif;
+  font-size: 1rem;
+       line-height: 1.65em;  
+   letter-spacing: .085px;  
   margin: 0 0 10px;
 }
 @media print, screen and (min-width: 768px) and (max-width: 1024px) {
@@ -398,13 +486,13 @@ h1, h2, h3, h4, h5, h6 {
 @media print, screen and (max-width: 767px) {
   .c-newsList_category {
     display: inline-block;
-    font-size: 12px;
+    font-size: 1.15rem;
     margin: 0 15px 0 0;
   }
 }
 
 .c-newsList_date {
-  font-family: "neue-haas-grotesk-display", MyYuGothicM, "游ゴシック", "Yu Gothic", YuGothic, "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif;
+  font-family: 'Open Sans Variable', sans-serif;
   font-size: 14px;
   color: #838383;
 }
@@ -477,7 +565,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .c-pageTitle {
-    font-family: 'Shippori Mincho', sans-serif;
+  font-family: 'Open Sans Variable', sans-serif;
   font-size: 80px;
   letter-spacing: -0.02em;
   padding: 0 0 80px;
@@ -542,7 +630,7 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 1.8rem;
     padding-top: 100px;   
     padding-bottom: 50px; 
-    font-family: 'Shippori Mincho', sans-serif;
+    font-family: 'Open Sans Variable', sans-serif;
 
 }
 
@@ -584,7 +672,7 @@ html {
           -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        text-rendering: optimizeLegibility;
-       font-family: 'Shippori Mincho', sans-serif;
+       font-family: 'Open Sans Variable', sans-serif;
 
       }
 
