--- a/src/components/AboutEn.astro
+++ b/src/components/AboutEn.astro
@@ -12,7 +12,7 @@
     <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
     <h2 class="introduction__heading astro-HR23OLMI">
         <span class="ttl_line">The traditional Vacchetta method in the heart of Tuscania, Italy</span></h2>
-    <p class="introduction__text astro-HR23OLMI">The leather primarily used by Pirca Mabui is a shoulder leather with a distinctive surface scratch processing, manufactured by Virgilio Conceria Artigiana located in the Ponte a Egola district of Tuscania, Italy.<br class="u-pc-only"><br class="pc"><br class="sp"><br class="sp"><br class="sp">The surface texture begins with a distinctive feel reminiscent of Japanese washi paper, initially rough to the touch. With use, internal oils blend in, gradually smoothing out the texture over a few months, resulting in a smooth surface. Eventually, it develops a beautiful glossy finish.</p>
+    <p class="introduction__text astro-HR23OLMI">We use shoulder leather with a distinctive scratch finish, manufactured by Virgilio Conceria Artigiana, located in the Ponte a Egola area of Tuscany, Italy.<br class="pc"><br class="pc"><br class="sp"><br class="sp">This leather is tanned slowly and carefully using plant-based tannins without any chemical substances. The surface has a unique, rough texture reminiscent of traditional Japanese paper. Over time, the natural oils in the leather will settle, and within about three months, the rough surface will smooth out, developing a beautiful, glossy finish.<br class="sp">This high-quality material offers the joy of nurturing the leather as it ages.</p>
       <div class="about__button" data-astro-cid-j7pv25f6="">
         <a href="/aboutleatherEn" class="button center" data-astro-cid-vnzlvqnm="">Learn more
            <svg viewBox="0 0 24 24" data-astro-cid-vnzlvqnm="" class="button__icon" astro-icon="majesticons:arrow-up-line">
@@ -33,8 +33,8 @@
   <section class="introduction astro-HR23OLMI">
     <div class="introduction__container astro-HR23OLMI">
       <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
-      <h2 class="introduction__heading astro-HR23OLMI"><span class="ttl_line">Exquisite linen threads, woven with the threads of history and tradition</span> </h2>
-      <p class="introduction__text astro-HR23OLMI">We use the premium hemp thread 'Fil Au Chinois,' established in France in 1847.This waxed hemp thread is favored by many luxury maisons, including Hermès, and artisans with discerning tastes.<br class="sp"><br class="sp">This hemp thread, crafted by skilled artisans using techniques from the late 19th century, is made from sturdy natural flax.</p></div>
+      <h2 class="introduction__heading astro-HR23OLMI"><span class="ttl_line">High-Quality Linen Thread Woven from History and Tradition</span> </h2>
+      <p class="introduction__text astro-HR23OLMI">We use high-quality linen thread, "Fil Au Chinois," established in 1847 in France. This waxed linen thread is favored by many luxury maisons, including Hermès, and by dedicated craftsmen. Manufactured by skilled artisans using methods from the late 19th century, this thread is made from durable natural flax.</p></div>
       <figure class="introduction__map astro-HR23OLMI">
       <img src="/filauchinois.webp" alt="threads" class="astro-HR23OLMI">
               <br><center><span style="color: #999999;">References:https://filauchinois.com/</span>  </center>
@@ -48,7 +48,7 @@
       <div class="introduction__container astro-HR23OLMI">
         <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
         <h2 class="introduction__heading astro-HR23OLMI"><span class="ttl_line">Over 400 years of tradition and the luxury of sound.</span></h2>
-        <p class="introduction__text astro-HR23OLMI">"The renowned German hardware manufacturer 'PRYM' boasts a history spanning over 400 years, unrivaled by any other company in the industry.<br class="sp"><br class="pc"><br class="sp"><br class="pc">The hardware has a slightly firm feel, and you'll likely hear a distinct 'click' sound when opening and closing. Known for producing that iconic 'German clasp' and providing leather enthusiasts with irresistible hardware, this manufacturer is cherished by those in the know.</p>
+        <p class="introduction__text astro-HR23OLMI">We use hardware from Germany's long-established manufacturer, PRYM. With over 400 years of history, PRYM stands unmatched by other manufacturers.<br class="sp"><br class="sp"> <br class="pc"><br class="pc">The hardware is slightly firm, producing a distinct "click" sound when opened and closed. Known for making the renowned "German snap fasteners," PRYM continues to provide leather enthusiasts with exceptional hardware.</p>
         </div>
         
         <figure class="introduction__map astro-HR23OLMI">
