--- a/src/components/HomeEn.astro
+++ b/src/components/HomeEn.astro
@@ -59,11 +59,11 @@
     </a>
   </li>
   <li class="c-bannerList_node">
-    <a href="/patternorder">
+    <a href="/pattern_order">
       <div class="c-bannerList_img">
         <img src="/samale-min.webp" alt="パターンオーダーの画像">
       </div>
-      <h3 class="c-bannerList_title">PATTERN ORDER</h3>
+      <h3 class="c-bannerList_title">Semi-Custom Made</h3>
       <p class="c-bannerList_text">We offer semi-custom orders where you can choose your preferred leather colors, hardware, and combinations for each part.</p>
     </a>
   </li>
