--- a/src/components/KeycaseEn.astro
+++ b/src/components/KeycaseEn.astro
@@ -26,46 +26,29 @@
                 
                 
                 <div class="newsEditor">
-                  <p>This product's appeal lies in its minimalism, enabling outings with just one item.<br class="pc"><br class="sp"><br class="sp">【&thinsp;Size (cm): Approximately H12 x W7&thinsp;】</p>
+                  <p>This product's minimalist design allows you to go out with just one item.<br class="pc"><br class="sp"><br class="sp">【&thinsp;Size (cm): Approximately H12 x W7&thinsp;】</p>
                 <p>&nbsp;</p>
           
                 <p><img loading="lazy" src="/keycaseBb.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>With a free pocket behind the key hook and main compartment, you can store multiple cards, IDs, spare bills, and more. <br class="pc"><br class="pc"><br class="sp"><br class="sp">It achieves a storage capacity beyond its compact appearance, offering practicality in style.
-                </p>
+                <p>With a hidden key hook and multiple pockets behind the main compartment, this product offers ample space for storing several cards, your driver's license, extra cash, and more. Its compact design belies its impressive storage capacity.<br class="pc"><br class="pc"><br class="sp"><br class="sp">This all-in-one solution is perfect for those who prefer to travel light, ensuring you have everything you need in one sleek item.</p>
                 <p>&nbsp;</p>
 
                 <p><img loading="lazy" src="/keycasepicx3.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
                 <p><img loading="lazy" src="/keycasepic2.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>The leftmost hook of the key hook fixture is designed with a larger size, allowing for the storage of thicker keys. Depending on their size, smart keys can also be accommodated. <br class="pc"><br class="pc"><br class="sp"><br class="sp">Please note that there are certain types that may not be attachable due to constraints in ring attachment position and height.<br class="sp"><br class="pc">
+                <p>The key hook features a larger hook on the far left side,allowing it to accommodate smart keys, depending on their size.<br class="pc"><br class="pc"><br class="sp"><br class="sp">Actual size of the stored smart key: approximately H6.2 cm x W3.5 cm.<br class="pc"><br class="pc"><br class="sp"><br class="sp">Please note that due to the position and height of the ring attachment, certain types of keys may not be compatible.<br class="sp"><br class="pc">
                 <p>&nbsp;</p>
 
                 <p><img loading="lazy" src="/keycasekana.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>We've meticulously selected top-tier components to ensure durability and longevity, allowing you to enjoy our product's performance for years to come.<br class="pc"><br class="pc"><br class="sp"><br class="sp">Our 4-ring key hook features the craftsmanship of Amiet, a renowned Swiss hardware manufacturer established in 1945. Crafted with the finest materials, these sturdy and elegant clasps exude quality and durability.<br class="pc"><br class="pc"><br class="sp"><br class="sp"><span class="stripe-marker">*Amiet ceased operations in 2021, but we've managed to procure a limited stock for our production, ensuring exclusivity and quality for our customers.</span></p><br class="sp"><br class="sp"><br class="pc">
+                <p>To ensure long-lasting durability, we have chosen top-quality parts for this product. The four-hook key holder features key hooks from Amiet, a prestigious Swiss hardware manufacturer founded in 1945. These hooks are made from the finest materials, combining robustness and elegance.<br class="pc"><br class="pc"><br class="sp"><br class="sp"><span class="stripe-marker"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0f0f0f" viewBox="0 0 256 256"><path d="M230.08,78.26l-31.84,26.88L208,145.33a5.46,5.46,0,0,1-8.19,5.86L164,129.66l-35.78,21.53a5.46,5.46,0,0,1-8.19-5.86l9.73-40.19L97.92,78.26a5.38,5.38,0,0,1,3.13-9.48l41.79-3.31,16.1-38.14a5.51,5.51,0,0,1,10.12,0l16.1,38.14L227,68.78A5.38,5.38,0,0,1,230.08,78.26Z" opacity="0.2"></path><path d="M239.35,70.08a13.41,13.41,0,0,0-11.77-9.28l-36.94-2.92L176.43,24.22a13.51,13.51,0,0,0-24.86,0L137.36,57.88,100.42,60.8a13.39,13.39,0,0,0-7.66,23.58l28.06,23.68-8.56,35.39a13.32,13.32,0,0,0,5.1,13.91,13.51,13.51,0,0,0,15,.69L164,139l31.65,19.06a13.54,13.54,0,0,0,15-.69,13.34,13.34,0,0,0,5.09-13.91l-8.56-35.39,28.06-23.68A13.32,13.32,0,0,0,239.35,70.08ZM193.08,99a8,8,0,0,0-2.61,8l8.28,34.21L168.13,122.8a8,8,0,0,0-8.25,0l-30.62,18.43L137.54,107a8,8,0,0,0-2.62-8L108,76.26l35.52-2.81a8,8,0,0,0,6.74-4.87L164,35.91l13.79,32.67a8,8,0,0,0,6.74,4.87l35.53,2.81Zm-105,24.18L29.66,181.66a8,8,0,0,1-11.32-11.32l58.45-58.45a8,8,0,0,1,11.32,11.32Zm10.81,49.87a8,8,0,0,1,0,11.31L45.66,237.66a8,8,0,0,1-11.32-11.32l53.27-53.26A8,8,0,0,1,98.92,173.08Zm73-1a8,8,0,0,1,0,11.32l-54.28,54.28a8,8,0,0,1-11.32-11.32l54.29-54.28A8,8,0,0,1,171.94,172.06Z"></path></svg>Amiet ceased operations in 2021, but we've managed to procure a limited stock for our production, ensuring exclusivity and quality for our customers.</span></p><br class="sp"><br class="sp"><br class="pc">
                   
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
-                  height="16x"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M160 96v32H288V96c0-35.3-28.7-64-64-64s-64 28.7-64 64zm-32 64H32V480H416V160H320v80 16H288V240 160H160v80 16H128V240 160zm0-32V96c0-53 43-96 96-96s96 43 96 96v32h96 32v32V480v32H416 32 0V480 160 128H32h96z"/></svg>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0f0f0f" viewBox="0 0 256 256"><path d="M239.89,198.12l-14.26-120a16,16,0,0,0-16-14.12H176a48,48,0,0,0-96,0H46.33a16,16,0,0,0-16,14.12l-14.26,120A16,16,0,0,0,20,210.6a16.13,16.13,0,0,0,12,5.4H223.92A16.13,16.13,0,0,0,236,210.6,16,16,0,0,0,239.89,198.12ZM128,32a32,32,0,0,1,32,32H96A32,32,0,0,1,128,32ZM32,200,46.33,80H80v24a8,8,0,0,0,16,0V80h64v24a8,8,0,0,0,16,0V80h33.75l14.17,120Z"></path></svg>
                   &ensp;<a href="https://pircamabui.stores.jp/items/63dc775397c24529034c0702" class="animate-link">(Coming soon)Buy Now</a>・・・¥&thinsp;18,000</a><br class="sp"><br class="pc">
                   <br>
-
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
-                  height="16x"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M160 96v32H288V96c0-35.3-28.7-64-64-64s-64 28.7-64 64zm-32 64H32V480H416V160H320v80 16H288V240 160H160v80 16H128V240 160zm0-32V96c0-53 43-96 96-96s96 43 96 96v32h96 32v32V480v32H416 32 0V480 160 128H32h96z"/></svg>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0f0f0f" viewBox="0 0 256 256"><path d="M239.89,198.12l-14.26-120a16,16,0,0,0-16-14.12H176a48,48,0,0,0-96,0H46.33a16,16,0,0,0-16,14.12l-14.26,120A16,16,0,0,0,20,210.6a16.13,16.13,0,0,0,12,5.4H223.92A16.13,16.13,0,0,0,236,210.6,16,16,0,0,0,239.89,198.12ZM128,32a32,32,0,0,1,32,32H96A32,32,0,0,1,128,32ZM32,200,46.33,80H80v24a8,8,0,0,0,16,0V80h64v24a8,8,0,0,0,16,0V80h33.75l14.17,120Z"></path></svg>
                   &ensp;<a href="/" class="animate-link" >(Coming soon)If you're interested in a custom order, please click here.</a> 
              
                 </p>
                 </div>
-
-
-          
-
-
-
-               
-
-
-            
-
-                 
-
 
                 </div>
 
@@ -75,7 +58,7 @@
   
               <div class="c-singlePager">
              
-                  <a href="/roundwallet1" class="c-singlePager_arrow-next">
+                  <a href="/roundwalletEn" class="c-singlePager_arrow-next">
                 <span>Next</span>
               </a>
             </div>
