--- a/src/components/Productlisten.astro
+++ b/src/components/Productlisten.astro
@@ -1,6 +1,6 @@
 
       
-<h1  class="Home_Contact_Title__KdAFZ">Collections</h1>
+<h1  class="Home_Contact_Title__KdAFZ">Collections<br class="pc"><br class="sp"><span class="koda"><br class="pc"><br class="sp">100% handcrafted by a single craftsman<br class="pc"><br class="sp">Hand Stitched with traditional methods<br class="pc"><br class="sp">Full grain Italian leather</span></h1>
 
 
 
@@ -17,12 +17,9 @@
                         </time>
         </div>
         <h3 class="newsList_title c-newsList_title">
-          - 100% handcrafted by a single craftsman<br class="pc"><br class="sp">
-          - Hand Stitched with traditional methods<br class="pc"><br class="sp">
-          - Full grain Italian leather.<br class="pc"><br class="sp">
-          - 1 interior card slots which hold 3 cards. <br class="pc"><br class="sp">
-          - Hook with Amiet, made in Switzerland<br class="pc"><br class="sp">
-          - YKK zippers , made in Japan<br class="pc"><br class="sp">     
+          - 1 interior card slots which hold 3 cards<br class="pc"><br class="sp"><br class="sp">
+          - Hook with Amiet, made in Switzerland<br class="pc"><br class="sp"><br class="sp">
+          - YKK zippers , made in Japan<br class="pc"><br class="sp"><br class="sp">
 
         </h3>
       </div>
@@ -34,7 +31,7 @@
   
   
       <li class="newsList_node c-newsList_node">
-    <a href="/roundwallet1">
+    <a href="/roundwalletEn">
       <div class="c-newsList_columnLeft">
         <div class="newsList_info c-newsList_info">
           <div class="newsList_category c-newsList_category">
@@ -43,13 +40,9 @@
                        </time>
         </div>
         <h3 class="newsList_title c-newsList_title">
-          - 100% handcrafted by a single craftsman<br class="pc"><br class="sp">
-          - Hand Stitched with traditional methods<br class="pc"><br class="sp">
-          - Full grain Italian leather<br class="pc"><br class="sp">
-          - 2 Card Pockets (holds 2-3 cards each)<br class="pc"><br class="sp">
-          - A pocket specifically for coins in the center <br class="pc"><br class="sp">
-          - Two open pockets<br class="pc"><br class="sp">
-          - YKK zippers , made in Japan<br class="pc"><br class="sp"> </h3>
+          - 2 Card Pockets (holds 2-3 cards each)<br class="pc"><br class="sp"><br class="sp">
+          - A pocket specifically for coins in the center <br class="pc"><br class="sp"><br class="sp">
+          - YKK zippers , made in Japan<br class="pc"><br class="sp"><br class="sp"> </h3>
       </div>
       <div class="newsList_img c-newsList_img">
         <img src="/roundbody.webp">
@@ -59,7 +52,7 @@
   
   
   <li class="newsList_node c-newsList_node">
-    <a href="/keycasehook">
+    <a href="/keyhookEn">
       <div class="c-newsList_columnLeft">
         <div class="newsList_info c-newsList_info">
           <div class="newsList_category c-newsList_category">
@@ -68,12 +61,9 @@
                        </time>
         </div>
         <h3 class="newsList_title c-newsList_title">
-          - 100% handcrafted by a single craftsman<br class="pc"><br class="sp">
-          - Hand Stitched with traditional methods<br class="pc"><br class="sp">
-          - Full grain Italian leather<br class="pc"><br class="sp">
-          - 1 Card Pocket (holds 2 cards)<br class="pc"><br class="sp">
-          - Brass grommet<br class="pc"><br class="sp">
-          - Hook with Amiet, made in Switzerland<br class="pc"><br class="sp"> </h3>
+          - 1 Card Pocket (holds 2 cards)<br class="pc"><br class="sp"><br class="sp">
+          - Brass grommet<br class="pc"><br class="sp"><br class="sp">
+          - Hook with Amiet, made in Switzerland<br class="pc"><br class="sp"><br class="sp"> </h3>
       </div>
       <div class="newsList_img c-newsList_img">
         <img src="/jeafiee.webp">
@@ -91,12 +81,9 @@
                      </time>
         </div>
         <h3 class="newsList_title c-newsList_title">
-          - 100% handcrafted by a single craftsman<br class="pc"><br class="sp">
-          - Hand Stitched with traditional methods<br class="pc"><br class="sp">
-          - Full grain Italian leather<br class="pc"><br class="sp">
-          - 3 Card Pockets (holds 1 cards each)<br class="pc"><br class="sp">
-          - A box-shaped coin purse (with a card pocket on the back, can hold 2,3 cards inside)<br class="pc"><br class="sp">
-          - 1 exterior bill slots which holds multiple bills<br class="pc"><br class="sp">
+          - 3 Card Pockets (holds 1 cards each)<br class="pc"><br class="sp"><br class="sp">
+          - A box-shaped coin purse (with a card pocket on the back, can hold 2,3 cards inside)<br class="pc"><br class="sp"><br class="sp">
+          - 1 exterior bill slots which holds multiple bills<br class="pc"><br class="sp"><br class="sp">
         </h3>
       </div>
       <div class="newsList_img c-newsList_img">
@@ -114,13 +101,10 @@
                      </time>
         </div>
         <h3 class="newsList_title c-newsList_title">
-          - 100% handcrafted by a single craftsman<br class="pc"><br class="sp">
-          - Hand Stitched with traditional methods<br class="pc"><br class="sp">
-          - Full grain Italian leather.<br class="pc"><br class="sp">
-          - 1 interior card slots which hold 3 cards<br class="pc"><br class="sp">
-          - Hook with Amiet, made in Switzerland<br class="pc"><br class="sp">
-          - Two pockets for smart/intelligent keys<br class="pc"><br class="sp">
-          - YKK zippers , made in Japan<br class="pc"><br class="sp">   
+          - 1 interior card slots which hold 3 cards<br class="pc"><br class="sp"><br class="sp">
+          - Hook with Amiet, made in Switzerland<br class="pc"><br class="sp"><br class="sp">
+          - Two pockets for smart/intelligent keys<br class="pc"><br class="sp"><br class="sp">
+          - YKK zippers , made in Japan<br class="pc"><br class="sp"><br class="sp">   
         </h3>
       </div>
       <div class="newsList_img c-newsList_img">
@@ -138,9 +122,6 @@
                       </time>
         </div>
         <h3 class="newsList_title c-newsList_title">
-          - 100% handcrafted by a single craftsman<br class="pc"><br class="sp">
-          - Hand Stitched with traditional methods<br class="pc"><br class="sp">
-          - Full grain Italian leather.<br class="pc"><br class="sp">
           - 5 Card Pockets (holds 1 cards each)<br class="pc"><br class="sp">
           - A box-shaped coin purse (with a 1 card pocket on the back)<br class="pc"><br class="sp">
           - 1 exterior bill slots which holds multiple bills<br class="pc"><br class="sp">   </h3>
@@ -161,9 +142,6 @@
                        </time>
         </div>
         <h3 class="newsList_title c-newsList_title">
-          - 100% handcrafted by a single craftsman<br class="pc"><br class="sp">
-          - Hand Stitched with traditional methods<br class="pc"><br class="sp">
-          - Full grain Italian leather.<br class="pc"><br class="sp">
           - Includes 1 RHODIA note <br class="pc"><br class="sp">
          </h3>
       </div>
@@ -182,9 +160,6 @@
                       </time>
         </div>
         <h3 class="newsList_title c-newsList_title">
-          - 100% handcrafted by a single craftsman<br class="pc"><br class="sp">
-          - Hand Stitched with traditional methods<br class="pc"><br class="sp">
-          - Full grain Italian leather.<br class="pc"><br class="sp">
           - One open pocket<br class="pc"><br class="sp">
           - 1 exterior card pocket which hold 1 cards <br class="pc"><br class="sp">
         </h3>
@@ -206,7 +181,6 @@
                        </time>
         </div>
         <h3 class="newsList_title c-newsList_title">
-          - 100% handcrafted by a single craftsman<br class="pc"><br class="sp">
           - Hand Stitched with traditional methods<br class="pc"><br class="sp">
           - Full grain Italian leather.<br class="pc"><br class="sp">          </h3>
       </div>
@@ -254,7 +228,9 @@
 
 
 <style>
-
+.koda{
+  font-size: 1.2rem;
+}
 
 .c-singlePager {
     position: relative;
