--- a/src/components/Productlisten.astro
+++ b/src/components/Productlisten.astro
@@ -72,7 +72,7 @@
   </li>
   
       <li class="newsList_node c-newsList_node">
-    <a href="/threewallet">
+    <a href="/trifold_wallet">
       <div class="c-newsList_columnLeft">
         <div class="newsList_info c-newsList_info">
           <div class="newsList_category c-newsList_category">
@@ -92,7 +92,7 @@
     </a>
   </li>
       <li class="newsList_node c-newsList_node">
-    <a href="/smartkey">
+    <a href="/smartkey_wallet">
       <div class="c-newsList_columnLeft">
         <div class="newsList_info c-newsList_info">
           <div class="newsList_category c-newsList_category">
@@ -113,7 +113,7 @@
     </a>
   </li>
   <li class="newsList_node c-newsList_node">
-    <a href="/smallwallet">
+    <a href="/small_wallet">
       <div class="c-newsList_columnLeft">
         <div class="newsList_info c-newsList_info">
           <div class="newsList_category c-newsList_category">
@@ -131,27 +131,9 @@
       </div>
     </a>
   </li>
-  
-  <li class="newsList_node c-newsList_node">
-    <a href="/note">
-      <div class="c-newsList_columnLeft">
-        <div class="newsList_info c-newsList_info">
-          <div class="newsList_category c-newsList_category">
-            STATIONERY             </div>
-          <time class="newsList_date c-newsList_date">
-                       </time>
-        </div>
-        <h3 class="newsList_title c-newsList_title">
-          - Includes 1 RHODIA note <br class="pc"><br class="sp">
-         </h3>
-      </div>
-      <div class="newsList_img c-newsList_img">
-        <img src="/notekore.webp">
-      </div>
-    </a>
-  </li>
+
       <li class="newsList_node c-newsList_node">
-    <a href="/minimam">
+    <a href="/minimam_wallet">
       <div class="c-newsList_columnLeft">
         <div class="newsList_info c-newsList_info">
           <div class="newsList_category c-newsList_category">
@@ -172,7 +154,7 @@
   
   
   <li class="newsList_node c-newsList_node">
-    <a href="/foldwallet">
+    <a href="/foldwalletEn">
       <div class="c-newsList_columnLeft">
         <div class="newsList_info c-newsList_info">
           <div class="newsList_category c-newsList_category">
@@ -181,8 +163,12 @@
                        </time>
         </div>
         <h3 class="newsList_title c-newsList_title">
-          - Hand Stitched with traditional methods<br class="pc"><br class="sp">
-          - Full grain Italian leather.<br class="pc"><br class="sp">          </h3>
+          - 2 Card Pockets (holds 1 cards each)<br class="pc"><br class="sp">
+          - 1 exterior bill slots which holds multiple bills<br class="pc"><br class="sp">
+          - Space available for holding multiple cards<br class="pc"><br class="sp">
+        </h3>
+
+        </h3>
       </div>
       <div class="newsList_img c-newsList_img">
         <img src="/wallt.webp">
@@ -201,9 +187,10 @@
                        </time>
         </div>
         <h3 class="newsList_title c-newsList_title">
-          - 100% handcrafted by a single craftsman<br class="pc"><br class="sp">
-          - Hand Stitched with traditional methods<br class="pc"><br class="sp">
-          - Full grain Italian leather.<br class="pc"><br class="sp">
+          - 2 Card Pockets (holds 1 cards each)<br class="pc"><br class="sp">
+          - A box-shaped coin purse<br class="pc"><br class="sp">
+          - 1 interior card slots which hold 3-4 cards<br class="pc"><br class="sp"><br class="sp">
+          - 1 bill slots which holds multiple bills<br class="pc"><br class="sp">
         </h3>
       </div>
       <div class="newsList_img c-newsList_img">
