--- a/src/pages/homeEn.astro
+++ b/src/pages/homeEn.astro
@@ -6,7 +6,7 @@ import { ViewTransitions } from 'astro:transitions';
 ---
 <ViewTransitions />
 
-<Layout title="English page home">
+<Layout title="Home_EN">
   <main>
 
   </main>
