--- a/src/components/SmartkeyEn.astro
+++ b/src/components/SmartkeyEn.astro
@@ -6,12 +6,12 @@
                   <div class="newsTop">
                     <div class="newsTop_info">
                       <div class="newsTop_category">
-                            </div>
+                              </div>
                       <time class="newsTop_date">
                             </time>
                     </div>
                     <h1 class="newsTop_title">
-                        KEYCASE </h1>
+                      Smart Key Wallet</h1>
                     <div class="newsTop_share">
                       <div class="newsTop_shareTitle"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="18px"
                         height="18px"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg><a class="sns" href="https://www.instagram.com/pirca.mabui/" target="blank">&thinsp;Instagram</a>
@@ -20,34 +20,30 @@
                     </div>
                   </div>
                   <div class="newsVisual">
-                    <img src="/jeafiee.webp">
+                    <img src="/smartmain.webp">
                   </div>
                 </div>
                 
                 
                 <div class="newsEditor">
-                  <p>This slim key case features a design where the leather is rolled into a cylinder and secured with a snap button. It's compact, easy to hold with one hand, and fits naturally in your hand.<br class="sp"><br class="sp"><br class="pc">【&thinsp;Size(cm) ApproximatelyH11.5 W6&thinsp;】</p>
+                  <p>This is a Smart Key Wallet with a pocket that can hold two smart keys or intelligent keys.<br class="sp"><br class="sp"><br class="pc">【&thinsp;Size(cm) Approximately H11.8 W8&thinsp;】</p>
                 <p>&nbsp;</p>
           
-                <p><img loading="lazy" src="/jfjrjfj.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
+                <p><img loading="lazy" src="/smartkey2.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
                 <p></p>
-                <p><img loading="lazy" src="/ejejje.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>Using a detachable ring, you can attach a car smart key to this key case. Depending on your needs, you can also hook it onto a belt loop or bag, or attach a strap to wear it around your neck, making it versatile for different lifestyles.</p>
-                <p>&nbsp;</p>
-
-                <p><img loading="lazy" src="/keycasehocksa.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>The interior snap buttons are made by PRYM, a renowned German hardware manufacturer. There is a free pocket in the center that can hold cards, emergency cash,or even a smart key,depending on its size.<br class="sp"><br class="sp"><br class="pc"><br class="pc">Actual dimensions of the stored smart key:<br class="sp">【&thinsp;Size(cm) Approximately H6.2 W3.5&thinsp;】<br class="pc"><br class="pc"><br class="sp"><br class="sp"><span class="stripe-marker"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0f0f0f" viewBox="0 0 256 256"><path d="M230.08,78.26l-31.84,26.88L208,145.33a5.46,5.46,0,0,1-8.19,5.86L164,129.66l-35.78,21.53a5.46,5.46,0,0,1-8.19-5.86l9.73-40.19L97.92,78.26a5.38,5.38,0,0,1,3.13-9.48l41.79-3.31,16.1-38.14a5.51,5.51,0,0,1,10.12,0l16.1,38.14L227,68.78A5.38,5.38,0,0,1,230.08,78.26Z" opacity="0.2"></path><path d="M239.35,70.08a13.41,13.41,0,0,0-11.77-9.28l-36.94-2.92L176.43,24.22a13.51,13.51,0,0,0-24.86,0L137.36,57.88,100.42,60.8a13.39,13.39,0,0,0-7.66,23.58l28.06,23.68-8.56,35.39a13.32,13.32,0,0,0,5.1,13.91,13.51,13.51,0,0,0,15,.69L164,139l31.65,19.06a13.54,13.54,0,0,0,15-.69,13.34,13.34,0,0,0,5.09-13.91l-8.56-35.39,28.06-23.68A13.32,13.32,0,0,0,239.35,70.08ZM193.08,99a8,8,0,0,0-2.61,8l8.28,34.21L168.13,122.8a8,8,0,0,0-8.25,0l-30.62,18.43L137.54,107a8,8,0,0,0-2.62-8L108,76.26l35.52-2.81a8,8,0,0,0,6.74-4.87L164,35.91l13.79,32.67a8,8,0,0,0,6.74,4.87l35.53,2.81Zm-105,24.18L29.66,181.66a8,8,0,0,1-11.32-11.32l58.45-58.45a8,8,0,0,1,11.32,11.32Zm10.81,49.87a8,8,0,0,1,0,11.31L45.66,237.66a8,8,0,0,1-11.32-11.32l53.27-53.26A8,8,0,0,1,98.92,173.08Zm73-1a8,8,0,0,1,0,11.32l-54.28,54.28a8,8,0,0,1-11.32-11.32l54.29-54.28A8,8,0,0,1,171.94,172.06Z"></path></svg>Please note that due to the attachment position and height, certain types of smart keys may not be compatible. [Smart key dimensions: approximately 1.6 cm thick or less]</span>
+                <p><img loading="lazy" src="/smartkey3.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
+                <p>On the left side, there is a 4-hook key holder that can accommodate regular keys, as well as a free pocket for storing cards (such as a driver's license), cash, and other items, allowing for versatile use. The inclusion of dividers helps prevent scratches, ensuring a thoughtful and protective design.<br class="pc"><br class="pc"><br class="sp"><br class="sp">Actual size of the stored smart keys:<br class="sp">【&thinsp;Size(cm) Approximately H6.2 W3.5&thinsp;】
                 </p>
                 <p>&nbsp;</p>
-                <p><img loading="lazy" src="/jfjfjjfs.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>To ensure long-lasting durability, we have selected top-quality parts for the key hook.<br class="sp"><br class="sp">The four-hook key holder uses key hooks from Amiet, a renowned Swiss hardware manufacturer established in 1945. Each part is stamped with "SWISS MADE,"signifying its robust and elegant design crafted from the highest quality materials.<br class="pc"><br class="pc"><br class="sp"><br class="sp"><span class="stripe-marker"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0f0f0f" viewBox="0 0 256 256"><path d="M230.08,78.26l-31.84,26.88L208,145.33a5.46,5.46,0,0,1-8.19,5.86L164,129.66l-35.78,21.53a5.46,5.46,0,0,1-8.19-5.86l9.73-40.19L97.92,78.26a5.38,5.38,0,0,1,3.13-9.48l41.79-3.31,16.1-38.14a5.51,5.51,0,0,1,10.12,0l16.1,38.14L227,68.78A5.38,5.38,0,0,1,230.08,78.26Z" opacity="0.2"></path><path d="M239.35,70.08a13.41,13.41,0,0,0-11.77-9.28l-36.94-2.92L176.43,24.22a13.51,13.51,0,0,0-24.86,0L137.36,57.88,100.42,60.8a13.39,13.39,0,0,0-7.66,23.58l28.06,23.68-8.56,35.39a13.32,13.32,0,0,0,5.1,13.91,13.51,13.51,0,0,0,15,.69L164,139l31.65,19.06a13.54,13.54,0,0,0,15-.69,13.34,13.34,0,0,0,5.09-13.91l-8.56-35.39,28.06-23.68A13.32,13.32,0,0,0,239.35,70.08ZM193.08,99a8,8,0,0,0-2.61,8l8.28,34.21L168.13,122.8a8,8,0,0,0-8.25,0l-30.62,18.43L137.54,107a8,8,0,0,0-2.62-8L108,76.26l35.52-2.81a8,8,0,0,0,6.74-4.87L164,35.91l13.79,32.67a8,8,0,0,0,6.74,4.87l35.53,2.81Zm-105,24.18L29.66,181.66a8,8,0,0,1-11.32-11.32l58.45-58.45a8,8,0,0,1,11.32,11.32Zm10.81,49.87a8,8,0,0,1,0,11.31L45.66,237.66a8,8,0,0,1-11.32-11.32l53.27-53.26A8,8,0,0,1,98.92,173.08Zm73-1a8,8,0,0,1,0,11.32l-54.28,54.28a8,8,0,0,1-11.32-11.32l54.29-54.28A8,8,0,0,1,171.94,172.06Z"></path></svg>Amiet, the renowned Swiss hardware manufacturer, ceased operations in 2021. As a result, our key holders are now made from existing stock, making them limited in quantity.</span></p><br class="sp"><br class="sp"><br class="pc">
+                <p><img loading="lazy" src="/smartkey1.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
+                <p>To ensure long-lasting durability, we have chosen top-quality parts for this product. The four-hook key holder features key hooks from Amiet, a prestigious Swiss hardware manufacturer founded in 1945. These hooks are made from the finest materials, combining robustness and elegance.<br class="pc"><br class="pc"><br class="sp"><br class="sp"><span class="stripe-marker"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0f0f0f" viewBox="0 0 256 256"><path d="M230.08,78.26l-31.84,26.88L208,145.33a5.46,5.46,0,0,1-8.19,5.86L164,129.66l-35.78,21.53a5.46,5.46,0,0,1-8.19-5.86l9.73-40.19L97.92,78.26a5.38,5.38,0,0,1,3.13-9.48l41.79-3.31,16.1-38.14a5.51,5.51,0,0,1,10.12,0l16.1,38.14L227,68.78A5.38,5.38,0,0,1,230.08,78.26Z" opacity="0.2"></path><path d="M239.35,70.08a13.41,13.41,0,0,0-11.77-9.28l-36.94-2.92L176.43,24.22a13.51,13.51,0,0,0-24.86,0L137.36,57.88,100.42,60.8a13.39,13.39,0,0,0-7.66,23.58l28.06,23.68-8.56,35.39a13.32,13.32,0,0,0,5.1,13.91,13.51,13.51,0,0,0,15,.69L164,139l31.65,19.06a13.54,13.54,0,0,0,15-.69,13.34,13.34,0,0,0,5.09-13.91l-8.56-35.39,28.06-23.68A13.32,13.32,0,0,0,239.35,70.08ZM193.08,99a8,8,0,0,0-2.61,8l8.28,34.21L168.13,122.8a8,8,0,0,0-8.25,0l-30.62,18.43L137.54,107a8,8,0,0,0-2.62-8L108,76.26l35.52-2.81a8,8,0,0,0,6.74-4.87L164,35.91l13.79,32.67a8,8,0,0,0,6.74,4.87l35.53,2.81Zm-105,24.18L29.66,181.66a8,8,0,0,1-11.32-11.32l58.45-58.45a8,8,0,0,1,11.32,11.32Zm10.81,49.87a8,8,0,0,1,0,11.31L45.66,237.66a8,8,0,0,1-11.32-11.32l53.27-53.26A8,8,0,0,1,98.92,173.08Zm73-1a8,8,0,0,1,0,11.32l-54.28,54.28a8,8,0,0,1-11.32-11.32l54.29-54.28A8,8,0,0,1,171.94,172.06Z"></path></svg>Amiet ceased operations in 2021, but we've managed to procure a limited stock for our production, ensuring exclusivity and quality for our customers.</span></p><br class="sp"><br class="sp"><br class="pc">
                   
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0f0f0f" viewBox="0 0 256 256"><path d="M239.89,198.12l-14.26-120a16,16,0,0,0-16-14.12H176a48,48,0,0,0-96,0H46.33a16,16,0,0,0-16,14.12l-14.26,120A16,16,0,0,0,20,210.6a16.13,16.13,0,0,0,12,5.4H223.92A16.13,16.13,0,0,0,236,210.6,16,16,0,0,0,239.89,198.12ZM128,32a32,32,0,0,1,32,32H96A32,32,0,0,1,128,32ZM32,200,46.33,80H80v24a8,8,0,0,0,16,0V80h64v24a8,8,0,0,0,16,0V80h33.75l14.17,120Z"></path></svg>
-                  &ensp;<a href="https://pircamabui.stores.jp/items/63dc775397c24529034c0702" class="animate-link">(Coming soon)Buy Now</a>・・・¥&thinsp;12,000</a><br class="sp"><br class="pc">
-                  <br>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0f0f0f" viewBox="0 0 256 256"><path d="M239.89,198.12l-14.26-120a16,16,0,0,0-16-14.12H176a48,48,0,0,0-96,0H46.33a16,16,0,0,0-16,14.12l-14.26,120A16,16,0,0,0,20,210.6a16.13,16.13,0,0,0,12,5.4H223.92A16.13,16.13,0,0,0,236,210.6,16,16,0,0,0,239.89,198.12ZM128,32a32,32,0,0,1,32,32H96A32,32,0,0,1,128,32ZM32,200,46.33,80H80v24a8,8,0,0,0,16,0V80h64v24a8,8,0,0,0,16,0V80h33.75l14.17,120Z"></path></svg>
-                  &ensp;<a href="/" class="animate-link" >(Coming soon)If you're interested in a custom order, please click here.</a> 
-             
+                &ensp;<a href="https://pircamabui.stores.jp/items/63dc775397c24529034c0702" class="animate-link">(Coming soon)Buy Now</a>・・・¥&thinsp;20,000</a><br class="sp"><br class="pc">
+                <br>
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0f0f0f" viewBox="0 0 256 256"><path d="M239.89,198.12l-14.26-120a16,16,0,0,0-16-14.12H176a48,48,0,0,0-96,0H46.33a16,16,0,0,0-16,14.12l-14.26,120A16,16,0,0,0,20,210.6a16.13,16.13,0,0,0,12,5.4H223.92A16.13,16.13,0,0,0,236,210.6,16,16,0,0,0,239.89,198.12ZM128,32a32,32,0,0,1,32,32H96A32,32,0,0,1,128,32ZM32,200,46.33,80H80v24a8,8,0,0,0,16,0V80h64v24a8,8,0,0,0,16,0V80h33.75l14.17,120Z"></path></svg>
+                &ensp;<a href="/" class="animate-link" >(Coming soon)If you're interested in a custom order, please click here.</a> 
+           
              
                 </p>
 
@@ -57,13 +53,15 @@
               </div>
   
               <div class="c-singlePager">
-                <a href="/roundwalletEn" class="c-singlePager_arrow-prev">
+                <a href="/trifold_wallet" class="c-singlePager_arrow-prev">
                 <span>Back</span>
               </a>
-                  <a href="/trifold_wallet" class="c-singlePager_arrow-next">
+                  <a href="/small_wallet" class="c-singlePager_arrow-next">
                 <span>Next</span>
               </a>
             </div>
+
+
 
 
             <style>
