--- a/src/pages/minimam_wallet.astro
+++ b/src/pages/minimam_wallet.astro
@@ -1,13 +1,14 @@
 ---
-import Layout from '../layouts/English2.astro';
+import Layout from '../layouts/English13.astro';
 import { ViewTransitions } from 'astro:transitions';
 
 ---
 <ViewTransitions />
 
-<Layout title="ProducList Page1">
+<Layout title="Minimam Wallet">
   <main>
      
 
   </main>
 </Layout>
+        
