--- a/src/pages/roundwalletEn.astro
+++ b/src/pages/roundwalletEn.astro
@@ -5,7 +5,7 @@ import { ViewTransitions } from 'astro:transitions';
 ---
 <ViewTransitions />
 
-<Layout title="Collections">
+<Layout title="RoundWallet">
   <main>
      
 
