--- a/src/pages/trifold_wallet.astro
+++ b/src/pages/trifold_wallet.astro
@@ -1,11 +1,11 @@
 ---
-import Layout from '../layouts/English2.astro';
+import Layout from '../layouts/English10.astro';
 import { ViewTransitions } from 'astro:transitions';
 
 ---
 <ViewTransitions />
 
-<Layout title="ProducList Page1">
+<Layout title="Trifold Wallet">
   <main>
      
 
