--- a/src/components/Productlisten.astro
+++ b/src/components/Productlisten.astro
@@ -17,9 +17,9 @@
                         </time>
         </div>
         <h3 class="newsList_title c-newsList_title">
-          - 1 interior card slots which hold 3 cards<br class="pc"><br class="sp"><br class="sp">
-          - Hook with Amiet, made in Switzerland<br class="pc"><br class="sp"><br class="sp">
-          - YKK zippers , made in Japan<br class="pc"><br class="sp"><br class="sp">
+          - 1 interior card slots which hold 3 cards<br class="pc"><br class="sp">
+          - Hook with Amiet, made in Switzerland<br class="pc"><br class="sp">
+          - YKK zippers , made in Japan<br class="pc"><br class="sp">
 
         </h3>
       </div>
@@ -40,9 +40,9 @@
                        </time>
         </div>
         <h3 class="newsList_title c-newsList_title">
-          - 2 Card Pockets (holds 2-3 cards each)<br class="pc"><br class="sp"><br class="sp">
-          - A pocket specifically for coins in the center <br class="pc"><br class="sp"><br class="sp">
-          - YKK zippers , made in Japan<br class="pc"><br class="sp"><br class="sp"> </h3>
+          - 2 Card Pockets (holds 2-3 cards each)<br class="pc"><br class="sp">
+          - A pocket specifically for coins in the center <br class="pc"><br class="sp">
+          - YKK zippers , made in Japan<br class="pc"><br class="sp"> </h3>
       </div>
       <div class="newsList_img c-newsList_img">
         <img src="/roundbody.webp">
@@ -61,9 +61,9 @@
                        </time>
         </div>
         <h3 class="newsList_title c-newsList_title">
-          - 1 Card Pocket (holds 2 cards)<br class="pc"><br class="sp"><br class="sp">
-          - Brass grommet<br class="pc"><br class="sp"><br class="sp">
-          - Hook with Amiet, made in Switzerland<br class="pc"><br class="sp"><br class="sp"> </h3>
+          - 1 Card Pocket (holds 2 cards)<br class="pc"><br class="sp">
+          - Brass grommet<br class="pc"><br class="sp">
+          - Hook with Amiet, made in Switzerland<br class="pc"><br class="sp"> </h3>
       </div>
       <div class="newsList_img c-newsList_img">
         <img src="/jeafiee.webp">
@@ -81,9 +81,9 @@
                      </time>
         </div>
         <h3 class="newsList_title c-newsList_title">
-          - 3 Card Pockets (holds 1 cards each)<br class="pc"><br class="sp"><br class="sp">
-          - A box-shaped coin purse (with a card pocket on the back, can hold 2,3 cards inside)<br class="pc"><br class="sp"><br class="sp">
-          - 1 exterior bill slots which holds multiple bills<br class="pc"><br class="sp"><br class="sp">
+          - 3 Card Pockets (holds 1 cards each)<br class="pc"><br class="sp">
+          - A box-shaped coin purse (with a card pocket on the back, can hold 2,3 cards inside)<br class="pc"><br class="sp">
+          - 1 exterior bill slots which holds multiple bills<br class="pc"><br class="sp">
         </h3>
       </div>
       <div class="newsList_img c-newsList_img">
@@ -101,10 +101,10 @@
                      </time>
         </div>
         <h3 class="newsList_title c-newsList_title">
-          - 1 interior card slots which hold 3 cards<br class="pc"><br class="sp"><br class="sp">
-          - Hook with Amiet, made in Switzerland<br class="pc"><br class="sp"><br class="sp">
-          - Two pockets for smart/intelligent keys<br class="pc"><br class="sp"><br class="sp">
-          - YKK zippers , made in Japan<br class="pc"><br class="sp"><br class="sp">   
+          - 1 interior card slots which hold 3 cards<br class="pc"><br class="sp">
+          - Hook with Amiet, made in Switzerland<br class="pc"><br class="sp">
+          - Two pockets for smart/intelligent keys<br class="pc"><br class="sp">
+          - YKK zippers , made in Japan<br class="pc"><br class="sp">
         </h3>
       </div>
       <div class="newsList_img c-newsList_img">
@@ -178,7 +178,7 @@
   
   
   <li class="newsList_node c-newsList_node">
-    <a href="/walletfasner">
+    <a href="/fasner_wallet">
       <div class="c-newsList_columnLeft">
         <div class="newsList_info c-newsList_info">
           <div class="newsList_category c-newsList_category">
@@ -189,8 +189,8 @@
         <h3 class="newsList_title c-newsList_title">
           - 2 Card Pockets (holds 1 cards each)<br class="pc"><br class="sp">
           - A box-shaped coin purse<br class="pc"><br class="sp">
-          - 1 interior card slots which hold 3-4 cards<br class="pc"><br class="sp"><br class="sp">
-          - 1 bill slots which holds multiple bills<br class="pc"><br class="sp">
+          - 1 interior card slots which hold 3-4 cards<br class="pc"><br class="sp">
+          - 1 bill slots which holds multiple bills<br class="pc">
         </h3>
       </div>
       <div class="newsList_img c-newsList_img">
@@ -206,12 +206,7 @@
 
 
 </div>
-<div class="c-singlePager">
 
-    <a href="/productlist2" class="c-singlePager_arrow-next">
-  <span>Next</span>
-</a>
-</div>
 
 
 <style>
