--- a/src/components/Pa3.astro
+++ b/src/components/Pa3.astro
@@ -45,8 +45,8 @@
       
 
         <p class="bun">
-            革・糸の色・金具のひとつひとつなど、細部にまでこだわれるのが、セミオーダーの醍醐味です。<br class="sp"><br class="sp">お客様の好みにあった組み合わせをぜひ見つけてください。<a href="https://pircamabui.com/patternorder/" class="animate-link" >詳細はこちらから<svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="#003EA2" viewBox="0 0 256 256"><path d="M132,136v64a12,12,0,0,1-24,0V165L48.49,224.49a12,12,0,0,1-17-17L91,148H56a12,12,0,0,1,0-24h64A12,12,0,0,1,132,136ZM208,28H80A20,20,0,0,0,60,48V92a12,12,0,0,0,24,0V52H204V172H164a12,12,0,0,0,0,24h44a20,20,0,0,0,20-20V48A20,20,0,0,0,208,28Z"></path></svg></a><br class="pc">
-            <br class="sp"><br class="sp"><br class="pc">お引き渡しについて、ご配達・仕入れにかかる日数を加え、発送まで３、４週間程度お時間を頂いております。
+            革のパーツ・糸の色・金具のひとつひとつなど、細部にまでこだわれるのが、セミオーダーの醍醐味です。<br class="sp"><br class="sp">お客様の好みにあった組み合わせをぜひ見つけてください。<a href="https://pircamabui.com/patternorder/" class="animate-link" >詳細はこちらから<svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="#003EA2" viewBox="0 0 256 256"><path d="M132,136v64a12,12,0,0,1-24,0V165L48.49,224.49a12,12,0,0,1-17-17L91,148H56a12,12,0,0,1,0-24h64A12,12,0,0,1,132,136ZM208,28H80A20,20,0,0,0,60,48V92a12,12,0,0,0,24,0V52H204V172H164a12,12,0,0,0,0,24h44a20,20,0,0,0,20-20V48A20,20,0,0,0,208,28Z"></path></svg></a><br class="pc">
+            <br class="sp"><br class="sp"><br class="pc">お引き渡しについて、仕入れにかかる日数を加え、発送まで３、４週間程度お時間を頂いております。
             <a href="/leagal" class="animate-link" >詳細はこちらから<svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="#003EA2" viewBox="0 0 256 256"><path d="M132,136v64a12,12,0,0,1-24,0V165L48.49,224.49a12,12,0,0,1-17-17L91,148H56a12,12,0,0,1,0-24h64A12,12,0,0,1,132,136ZM208,28H80A20,20,0,0,0,60,48V92a12,12,0,0,0,24,0V52H204V172H164a12,12,0,0,0,0,24h44a20,20,0,0,0,20-20V48A20,20,0,0,0,208,28Z"></path></svg></a>
           
         </p>
