--- a/src/components/ThreewalletEn.astro
+++ b/src/components/ThreewalletEn.astro
@@ -67,7 +67,6 @@
               </div>
   
 
-
               <style>
 
 
@@ -102,7 +101,7 @@
                   .c-singlePager {
                       position: relative;
                       font-size: 20px;
-                      font-family: 'Shippori Mincho', sans-serif;
+                      font-family: 'Open Sans Variable', sans-serif;
                       margin: 50px 40px 80px;
                       padding: 0 0 10px;
                   }
@@ -177,7 +176,7 @@
                     display: -webkit-box;
                     display: -ms-flexbox;
                     display: flex;
-                    font-family: 'Shippori Mincho', sans-serif;
+                    font-family: 'Open Sans Variable', sans-serif;
                     font-size: 16px;
                   }
                   @media print, screen and (max-width: 767px) {
@@ -189,7 +188,7 @@
                   .newsTop_category {
                     margin: 0 20px 0 0;
                     font-size: 1.125rem;
-                    font-family: 'Shippori Mincho', sans-serif;
+                    font-family: 'Open Sans Variable', sans-serif;
                   
                   
                   }
@@ -200,7 +199,9 @@
                   
                   .newsTop_title {
                     font-size: 1.55rem;
-                    line-height: 1.5;
+                  
+                    line-height: 1.65em;
+                    letter-spacing: .065px;
                     margin: 10px 0 0;
                   }
                   @media print, screen and (min-width: 768px) and (max-width: 1024px) {
@@ -225,7 +226,7 @@
                   }
                   
                   .newsTop_shareTitle {
-                      font-family: 'Shippori Mincho', sans-serif;
+                    font-family: 'Open Sans Variable', sans-serif;
                     margin: 0 20px 0 0;
                     font-size: 1rem;
                   }
@@ -249,9 +250,11 @@
                     margin: 120px auto 0;
                   }
                   .newsEditor p {
-                    line-height: 1.5;
+                
+                    line-height: 1.65em;
+                    letter-spacing: .065px;
                     font-size: 1rem;
-                    font-family: 'Shippori Mincho', sans-serif;
+                    font-family: 'Open Sans Variable', sans-serif;
                   
                   }
                   .newsEditor a {
@@ -336,21 +339,23 @@
                     .newsEditor[data-astro-cid-ekziid7k] p[data-astro-cid-ekziid7k]{
                       font-size: 1rem;
                   
-                      font-family: "Shippori Mincho B1",serif;
-                      line-height: 1.5;
-                      letter-spacing: .055px;
+                      font-family: 'Open Sans Variable', sans-serif;
+                      line-height: 1.65em;
+                    letter-spacing: .065px;
                   
                     }
                   }
                   
                 
                   p{
-                    font-family: "Shippori Mincho B1",serif;
-                    line-height: 1.5;
+                    font-family: 'Open Sans Variable', sans-serif;
+                  
                       margin-top: 3.125rem;
                       transition: .6s 1s;
                       font-size: 1rem;
-                      letter-spacing: .055px;
+                      line-height: 1.65em;
+                    letter-spacing: .065px;
+                
                   }
                   
                   
@@ -373,7 +378,8 @@
                       border-width: 0
                   }
                   html {
-                    line-height: 1.5;
+                  line-height: 1.65em;
+                    letter-spacing: .065px;
                             -webkit-text-size-adjust: 100%;
                             -webkit-tap-highlight-color: transparent
                         }
@@ -384,7 +390,7 @@
                             -moz-osx-font-smoothing: grayscale;
                          -webkit-font-smoothing: antialiased;
                          text-rendering: optimizeLegibility;
-                         font-family: 'Shippori Mincho', sans-serif;
+                         font-family: 'Open Sans Variable', sans-serif;
                   
                         }
                         
