--- a/src/components/FoldwalletEn.astro
+++ b/src/components/FoldwalletEn.astro
@@ -66,8 +66,7 @@
   
 
 
-
-            <style>
+              <style>
 
 
 
@@ -101,7 +100,7 @@
                   .c-singlePager {
                       position: relative;
                       font-size: 20px;
-                      font-family: 'Shippori Mincho', sans-serif;
+                      font-family: 'Open Sans Variable', sans-serif;
                       margin: 50px 40px 80px;
                       padding: 0 0 10px;
                   }
@@ -176,7 +175,7 @@
                     display: -webkit-box;
                     display: -ms-flexbox;
                     display: flex;
-                    font-family: 'Shippori Mincho', sans-serif;
+                    font-family: 'Open Sans Variable', sans-serif;
                     font-size: 16px;
                   }
                   @media print, screen and (max-width: 767px) {
@@ -188,7 +187,7 @@
                   .newsTop_category {
                     margin: 0 20px 0 0;
                     font-size: 1.125rem;
-                    font-family: 'Shippori Mincho', sans-serif;
+                    font-family: 'Open Sans Variable', sans-serif;
                   
                   
                   }
@@ -199,7 +198,9 @@
                   
                   .newsTop_title {
                     font-size: 1.55rem;
-                    line-height: 1.5;
+                  
+                    line-height: 1.65em;
+                    letter-spacing: .065px;
                     margin: 10px 0 0;
                   }
                   @media print, screen and (min-width: 768px) and (max-width: 1024px) {
@@ -224,7 +225,7 @@
                   }
                   
                   .newsTop_shareTitle {
-                      font-family: 'Shippori Mincho', sans-serif;
+                    font-family: 'Open Sans Variable', sans-serif;
                     margin: 0 20px 0 0;
                     font-size: 1rem;
                   }
@@ -248,9 +249,11 @@
                     margin: 120px auto 0;
                   }
                   .newsEditor p {
-                    line-height: 1.5;
+                
+                    line-height: 1.65em;
+                    letter-spacing: .065px;
                     font-size: 1rem;
-                    font-family: 'Shippori Mincho', sans-serif;
+                    font-family: 'Open Sans Variable', sans-serif;
                   
                   }
                   .newsEditor a {
@@ -335,21 +338,23 @@
                     .newsEditor[data-astro-cid-ekziid7k] p[data-astro-cid-ekziid7k]{
                       font-size: 1rem;
                   
-                      font-family: "Shippori Mincho B1",serif;
-                      line-height: 1.5;
-                      letter-spacing: .055px;
+                      font-family: 'Open Sans Variable', sans-serif;
+                      line-height: 1.65em;
+                    letter-spacing: .065px;
                   
                     }
                   }
                   
                 
                   p{
-                    font-family: "Shippori Mincho B1",serif;
-                    line-height: 1.5;
+                    font-family: 'Open Sans Variable', sans-serif;
+                  
                       margin-top: 3.125rem;
                       transition: .6s 1s;
                       font-size: 1rem;
-                      letter-spacing: .055px;
+                      line-height: 1.65em;
+                    letter-spacing: .065px;
+                
                   }
                   
                   
@@ -372,7 +377,8 @@
                       border-width: 0
                   }
                   html {
-                    line-height: 1.5;
+                  line-height: 1.65em;
+                    letter-spacing: .065px;
                             -webkit-text-size-adjust: 100%;
                             -webkit-tap-highlight-color: transparent
                         }
@@ -383,7 +389,7 @@
                             -moz-osx-font-smoothing: grayscale;
                          -webkit-font-smoothing: antialiased;
                          text-rendering: optimizeLegibility;
-                         font-family: 'Shippori Mincho', sans-serif;
+                         font-family: 'Open Sans Variable', sans-serif;
                   
                         }
                         
