--- a/src/components/KeycaseEn.astro
+++ b/src/components/KeycaseEn.astro
@@ -42,7 +42,7 @@
                 <p>To ensure long-lasting durability, we have chosen top-quality parts for this product. The four-hook key holder features key hooks from Amiet, a prestigious Swiss hardware manufacturer founded in 1945. These hooks are made from the finest materials, combining robustness and elegance.<br class="pc"><br class="pc"><br class="sp"><br class="sp"><span class="stripe-marker"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0f0f0f" viewBox="0 0 256 256"><path d="M230.08,78.26l-31.84,26.88L208,145.33a5.46,5.46,0,0,1-8.19,5.86L164,129.66l-35.78,21.53a5.46,5.46,0,0,1-8.19-5.86l9.73-40.19L97.92,78.26a5.38,5.38,0,0,1,3.13-9.48l41.79-3.31,16.1-38.14a5.51,5.51,0,0,1,10.12,0l16.1,38.14L227,68.78A5.38,5.38,0,0,1,230.08,78.26Z" opacity="0.2"></path><path d="M239.35,70.08a13.41,13.41,0,0,0-11.77-9.28l-36.94-2.92L176.43,24.22a13.51,13.51,0,0,0-24.86,0L137.36,57.88,100.42,60.8a13.39,13.39,0,0,0-7.66,23.58l28.06,23.68-8.56,35.39a13.32,13.32,0,0,0,5.1,13.91,13.51,13.51,0,0,0,15,.69L164,139l31.65,19.06a13.54,13.54,0,0,0,15-.69,13.34,13.34,0,0,0,5.09-13.91l-8.56-35.39,28.06-23.68A13.32,13.32,0,0,0,239.35,70.08ZM193.08,99a8,8,0,0,0-2.61,8l8.28,34.21L168.13,122.8a8,8,0,0,0-8.25,0l-30.62,18.43L137.54,107a8,8,0,0,0-2.62-8L108,76.26l35.52-2.81a8,8,0,0,0,6.74-4.87L164,35.91l13.79,32.67a8,8,0,0,0,6.74,4.87l35.53,2.81Zm-105,24.18L29.66,181.66a8,8,0,0,1-11.32-11.32l58.45-58.45a8,8,0,0,1,11.32,11.32Zm10.81,49.87a8,8,0,0,1,0,11.31L45.66,237.66a8,8,0,0,1-11.32-11.32l53.27-53.26A8,8,0,0,1,98.92,173.08Zm73-1a8,8,0,0,1,0,11.32l-54.28,54.28a8,8,0,0,1-11.32-11.32l54.29-54.28A8,8,0,0,1,171.94,172.06Z"></path></svg>Amiet ceased operations in 2021, but we've managed to procure a limited stock for our production, ensuring exclusivity and quality for our customers.</span></p><br class="sp"><br class="sp"><br class="pc">
                   
                   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0f0f0f" viewBox="0 0 256 256"><path d="M239.89,198.12l-14.26-120a16,16,0,0,0-16-14.12H176a48,48,0,0,0-96,0H46.33a16,16,0,0,0-16,14.12l-14.26,120A16,16,0,0,0,20,210.6a16.13,16.13,0,0,0,12,5.4H223.92A16.13,16.13,0,0,0,236,210.6,16,16,0,0,0,239.89,198.12ZM128,32a32,32,0,0,1,32,32H96A32,32,0,0,1,128,32ZM32,200,46.33,80H80v24a8,8,0,0,0,16,0V80h64v24a8,8,0,0,0,16,0V80h33.75l14.17,120Z"></path></svg>
-                  &ensp;<a href="https://pircamabui.stores.jp/items/63dc775397c24529034c0702" class="animate-link">(Coming soon)Buy Now</a>・・・¥&thinsp;18,000</a><br class="sp"><br class="pc">
+                  &ensp;<a href="/order1En" class="animate-link">(Coming soon)Buy Now</a>・・・¥&thinsp;18,000</a><br class="sp"><br class="pc">
                   <br>
                   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0f0f0f" viewBox="0 0 256 256"><path d="M239.89,198.12l-14.26-120a16,16,0,0,0-16-14.12H176a48,48,0,0,0-96,0H46.33a16,16,0,0,0-16,14.12l-14.26,120A16,16,0,0,0,20,210.6a16.13,16.13,0,0,0,12,5.4H223.92A16.13,16.13,0,0,0,236,210.6,16,16,0,0,0,239.89,198.12ZM128,32a32,32,0,0,1,32,32H96A32,32,0,0,1,128,32ZM32,200,46.33,80H80v24a8,8,0,0,0,16,0V80h64v24a8,8,0,0,0,16,0V80h33.75l14.17,120Z"></path></svg>
                   &ensp;<a href="/" class="animate-link" >(Coming soon)If you're interested in a custom order, please click here.</a> 
@@ -98,7 +98,7 @@
   .c-singlePager {
       position: relative;
       font-size: 20px;
-      font-family: 'Shippori Mincho', sans-serif;
+      font-family: 'Open Sans Variable', sans-serif;
       margin: 50px 40px 80px;
       padding: 0 0 10px;
   }
@@ -173,7 +173,7 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    font-family: 'Shippori Mincho', sans-serif;
+    font-family: 'Open Sans Variable', sans-serif;
     font-size: 16px;
   }
   @media print, screen and (max-width: 767px) {
@@ -185,7 +185,7 @@
   .newsTop_category {
     margin: 0 20px 0 0;
     font-size: 1.125rem;
-    font-family: 'Shippori Mincho', sans-serif;
+    font-family: 'Open Sans Variable', sans-serif;
   
   
   }
@@ -196,7 +196,9 @@
   
   .newsTop_title {
     font-size: 1.55rem;
-    line-height: 1.5;
+  
+    line-height: 1.65em;
+    letter-spacing: .065px;
     margin: 10px 0 0;
   }
   @media print, screen and (min-width: 768px) and (max-width: 1024px) {
@@ -221,7 +223,7 @@
   }
   
   .newsTop_shareTitle {
-      font-family: 'Shippori Mincho', sans-serif;
+    font-family: 'Open Sans Variable', sans-serif;
     margin: 0 20px 0 0;
     font-size: 1rem;
   }
@@ -245,9 +247,11 @@
     margin: 120px auto 0;
   }
   .newsEditor p {
-    line-height: 1.5;
+
+    line-height: 1.65em;
+    letter-spacing: .065px;
     font-size: 1rem;
-    font-family: 'Shippori Mincho', sans-serif;
+    font-family: 'Open Sans Variable', sans-serif;
   
   }
   .newsEditor a {
@@ -332,21 +336,23 @@
     .newsEditor[data-astro-cid-ekziid7k] p[data-astro-cid-ekziid7k]{
       font-size: 1rem;
   
-      font-family: "Shippori Mincho B1",serif;
-      line-height: 1.5;
-      letter-spacing: .055px;
+      font-family: 'Open Sans Variable', sans-serif;
+      line-height: 1.65em;
+    letter-spacing: .065px;
   
     }
   }
   
 
   p{
-    font-family: "Shippori Mincho B1",serif;
-    line-height: 1.5;
+    font-family: 'Open Sans Variable', sans-serif;
+  
       margin-top: 3.125rem;
       transition: .6s 1s;
       font-size: 1rem;
-      letter-spacing: .055px;
+      line-height: 1.65em;
+    letter-spacing: .065px;
+
   }
   
   
@@ -369,7 +375,8 @@
       border-width: 0
   }
   html {
-    line-height: 1.5;
+  line-height: 1.65em;
+    letter-spacing: .065px;
             -webkit-text-size-adjust: 100%;
             -webkit-tap-highlight-color: transparent
         }
@@ -380,7 +387,7 @@
             -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          text-rendering: optimizeLegibility;
-         font-family: 'Shippori Mincho', sans-serif;
+         font-family: 'Open Sans Variable', sans-serif;
   
         }
         
