--- a/src/components/Pa1En.astro
+++ b/src/components/Pa1En.astro
@@ -50,10 +50,9 @@
     <div class="description-container">
       
 
-        <p class="bun">
-            革・糸の色・金具などをご選択できます。お客様の好みにあった組み合わせをぜひ見つけてください。<br class="pc">
-            <br class="sp"><br class="sp"><br class="pc">お引き渡しについて、仕入れにかかる日数を加え、発送まで2、3週間程度お時間を頂いております。
-            <a href="/leagal" class="animate-link" >詳細はこちらから<svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="#003EA2" viewBox="0 0 256 256"><path d="M132,136v64a12,12,0,0,1-24,0V165L48.49,224.49a12,12,0,0,1-17-17L91,148H56a12,12,0,0,1,0-24h64A12,12,0,0,1,132,136ZM208,28H80A20,20,0,0,0,60,48V92a12,12,0,0,0,24,0V52H204V172H164a12,12,0,0,0,0,24h44a20,20,0,0,0,20-20V48A20,20,0,0,0,208,28Z"></path></svg></a>
+        <p class="bun">You can choose the color of the leather, thread, and hardware. Find the perfect combination to suit your personal taste.<br class="pc">
+            <br class="sp"><br class="sp"><br class="pc">For delivery, please allow approximately 2 to 3 weeks, including the time needed for sourcing materials before shipment.
+            <br class="pc"><a href="/leagal" class="animate-link" >Read more<svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="#003EA2" viewBox="0 0 256 256"><path d="M132,136v64a12,12,0,0,1-24,0V165L48.49,224.49a12,12,0,0,1-17-17L91,148H56a12,12,0,0,1,0-24h64A12,12,0,0,1,132,136ZM208,28H80A20,20,0,0,0,60,48V92a12,12,0,0,0,24,0V52H204V172H164a12,12,0,0,0,0,24h44a20,20,0,0,0,20-20V48A20,20,0,0,0,208,28Z"></path></svg></a>
           
         </p>
     </div>
@@ -63,89 +62,89 @@
     <h1 class="Home_Contact_Title__KdAFZ">SELECT</h1>
     <main class="Layout_Main__dLHqI">
         <div class="Home_Contact__nbvJ6">
-            <p class="Home_Contact_Text__3D7zy">オーダーは以下のフォームよりお送りください。<br class="sp"><br>送信後、決算ページに移行します。<br class="sp"><span class="stripe-marker"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0f0f0f" viewBox="0 0 256 256"><path d="M230.08,78.26l-31.84,26.88L208,145.33a5.46,5.46,0,0,1-8.19,5.86L164,129.66l-35.78,21.53a5.46,5.46,0,0,1-8.19-5.86l9.73-40.19L97.92,78.26a5.38,5.38,0,0,1,3.13-9.48l41.79-3.31,16.1-38.14a5.51,5.51,0,0,1,10.12,0l16.1,38.14L227,68.78A5.38,5.38,0,0,1,230.08,78.26Z" opacity="0.2"></path><path d="M239.35,70.08a13.41,13.41,0,0,0-11.77-9.28l-36.94-2.92L176.43,24.22a13.51,13.51,0,0,0-24.86,0L137.36,57.88,100.42,60.8a13.39,13.39,0,0,0-7.66,23.58l28.06,23.68-8.56,35.39a13.32,13.32,0,0,0,5.1,13.91,13.51,13.51,0,0,0,15,.69L164,139l31.65,19.06a13.54,13.54,0,0,0,15-.69,13.34,13.34,0,0,0,5.09-13.91l-8.56-35.39,28.06-23.68A13.32,13.32,0,0,0,239.35,70.08ZM193.08,99a8,8,0,0,0-2.61,8l8.28,34.21L168.13,122.8a8,8,0,0,0-8.25,0l-30.62,18.43L137.54,107a8,8,0,0,0-2.62-8L108,76.26l35.52-2.81a8,8,0,0,0,6.74-4.87L164,35.91l13.79,32.67a8,8,0,0,0,6.74,4.87l35.53,2.81Zm-105,24.18L29.66,181.66a8,8,0,0,1-11.32-11.32l58.45-58.45a8,8,0,0,1,11.32,11.32Zm10.81,49.87a8,8,0,0,1,0,11.31L45.66,237.66a8,8,0,0,1-11.32-11.32l53.27-53.26A8,8,0,0,1,98.92,173.08Zm73-1a8,8,0,0,1,0,11.32l-54.28,54.28a8,8,0,0,1-11.32-11.32l54.29-54.28A8,8,0,0,1,171.94,172.06Z"></path></svg>カート名：注文希望の色をご選択します。</span>  <br class="sp"><br class="pc"><span class="kome">※</span>は必須項目です</p>
-            <form method="post" action="https://contact-web.form.newt.so/v1/GG7K2kLP0">
+            <p class="Home_Contact_Text__3D7zy">Please submit your order using the form below.<br class="sp"><br>After submission, you will be redirected to the payment page.<br class="sp"><br class="pc"><span class="stripe-marker"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0f0f0f" viewBox="0 0 256 256"><path d="M230.08,78.26l-31.84,26.88L208,145.33a5.46,5.46,0,0,1-8.19,5.86L164,129.66l-35.78,21.53a5.46,5.46,0,0,1-8.19-5.86l9.73-40.19L97.92,78.26a5.38,5.38,0,0,1,3.13-9.48l41.79-3.31,16.1-38.14a5.51,5.51,0,0,1,10.12,0l16.1,38.14L227,68.78A5.38,5.38,0,0,1,230.08,78.26Z" opacity="0.2"></path><path d="M239.35,70.08a13.41,13.41,0,0,0-11.77-9.28l-36.94-2.92L176.43,24.22a13.51,13.51,0,0,0-24.86,0L137.36,57.88,100.42,60.8a13.39,13.39,0,0,0-7.66,23.58l28.06,23.68-8.56,35.39a13.32,13.32,0,0,0,5.1,13.91,13.51,13.51,0,0,0,15,.69L164,139l31.65,19.06a13.54,13.54,0,0,0,15-.69,13.34,13.34,0,0,0,5.09-13.91l-8.56-35.39,28.06-23.68A13.32,13.32,0,0,0,239.35,70.08ZM193.08,99a8,8,0,0,0-2.61,8l8.28,34.21L168.13,122.8a8,8,0,0,0-8.25,0l-30.62,18.43L137.54,107a8,8,0,0,0-2.62-8L108,76.26l35.52-2.81a8,8,0,0,0,6.74-4.87L164,35.91l13.79,32.67a8,8,0,0,0,6.74,4.87l35.53,2.81Zm-105,24.18L29.66,181.66a8,8,0,0,1-11.32-11.32l58.45-58.45a8,8,0,0,1,11.32,11.32Zm10.81,49.87a8,8,0,0,1,0,11.31L45.66,237.66a8,8,0,0,1-11.32-11.32l53.27-53.26A8,8,0,0,1,98.92,173.08Zm73-1a8,8,0,0,1,0,11.32l-54.28,54.28a8,8,0,0,1-11.32-11.32l54.29-54.28A8,8,0,0,1,171.94,172.06Z"></path></svg>Cart Name: Select your desired color.</span>  <br class="sp"><br class="pc"><span class="kome">*</span>denotes mandatory fields.</p>
+            <form method="post" action="https://contact-web.form.newt.so/v1/5dF7urNX1">
                 <div style="display: none;"><input type="text" name="name" /></div>
-                <label class="Home_Contact_Label__hwNpu" for="name">*氏名</label>
-                <input class="Home_Contact_InputText__vKPd7" id="name" required="required" name="name" placeholder="本名をご記入ください">
-                <label class="Home_Contact_Label__hwNpu" for="email">*メールアドレス</label>
+                <label class="Home_Contact_Label__hwNpu" for="name">*Name</label>
+                <input class="Home_Contact_InputText__vKPd7" id="name" required="required" name="name" placeholder="Please enter your full name.">
+                <label class="Home_Contact_Label__hwNpu" for="email">*Email Address</label>
                 <input class="Home_Contact_InputText__vKPd7" id="email" type="email" required="required" name="email" placeholder="info@example.com">
                
               
 
-                <label class="Home_Contact_Label__hwNpu" for="fasner_gold">ファスナー (&thinsp;ゴールド&thinsp;)</label>
+                <label class="Home_Contact_Label__hwNpu" for="fasner_gold">Zipper(&thinsp;For those who prefer Gold&thinsp;)</label>
                 <select name="fasner_gold" class="form-control">
-                    <option value="" disabled selected>選択してください</option>
-                    <option value="ホワイト">ホワイト</option>
-                    <option value="ブラウン">ブラウン</option>
-                    <option value="ブラック">ブラック</option>
-                    <option value="グリーン">グリーン</option>
-                    <option value="ワイン">ワイン</option>
-                    <option value="オレンジ">オレンジ</option>
-                    <option value="ターコイズ">ターコイズ</option>
+                    <option value="" disabled selected>Please select</option>
+                    <option value="ホワイト">White</option>
+                    <option value="ブラウン">Brown</option>
+                    <option value="ブラック">Black</option>
+                    <option value="グリーン">Green</option>
+                    <option value="ワイン">Wine</option>
+                    <option value="オレンジ">Orange</option>
+                    <option value="ターコイズ">Turquoise</option>
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="fasner_silver">ファスナー (&thinsp;シルバー 希望の方&thinsp;)
+                <label class="Home_Contact_Label__hwNpu" for="fasner_silver">Zipper(&thinsp;For those who prefer Silver&thinsp;)
                 </label>
                 <select name="fasner_silver" class="form-control" >
-                    <option value="" disabled selected>選択してください</option>
-                    <option value="ホワイト">ホワイト</option>
-                    <option value="ブラウン">ブラウン</option>
-                    <option value="ブラック">ブラック</option>
-                    <option value="グリーン">グリーン</option>
-                    <option value="ワイン">ワイン</option>
-                    <option value="オレンジ">オレンジ</option>
-                    <option value="ターコイズ">ターコイズ</option>
+                    <option value="" disabled selected>Please select</option>
+                    <option value="ホワイト">White</option>
+                    <option value="ブラウン">Brown</option>
+                    <option value="ブラック">Black</option>
+                    <option value="グリーン">Green</option>
+                    <option value="ワイン">Wine</option>
+                    <option value="オレンジ">Orange</option>
+                    <option value="ターコイズ">Turquoise</option>
                 </select>
 
 
-                <label class="Home_Contact_Label__hwNpu" for="fasner_antique">ファスナー (&thinsp;アンティーク 希望の方&thinsp;)
+                <label class="Home_Contact_Label__hwNpu" for="fasner_antique">Zipper(&thinsp;For those who prefer Antique &thinsp;)
                 </label>
                 <select name="fasner_antique" class="form-control" >
-                    <option value="" disabled selected>選択してください</option>
-                    <option value="ホワイト">ホワイト</option>
-                    <option value="ブラウン">ブラウン</option>
-                    <option value="ブラック">ブラック</option>
-                    <option value="グリーン">グリーン</option>
-                    <option value="ワイン">ワイン</option>
-                    <option value="オレンジ">オレンジ</option>
-                    <option value="ターコイズ">ターコイズ</option>
+                    <option value="" disabled selected>Please select</option>
+                    <option value="ホワイト">White</option>
+                    <option value="ブラウン">Brown</option>
+                    <option value="ブラック">Black</option>
+                    <option value="グリーン">Green</option>
+                    <option value="ワイン">Wine</option>
+                    <option value="オレンジ">Orange</option>
+                    <option value="ターコイズ">Turquoise</option>
                 </select>
 
 
-                <label class="Home_Contact_Label__hwNpu" for="ito">*糸</label>
+                <label class="Home_Contact_Label__hwNpu" for="ito">*Thread</label>
                 <select name="ito" class="form-control" required="required">
-                    <option value="" disabled selected>選択してください</option>
-                    <option value="No.1アイボリー">No.1&thinsp;アイボリー</option>
-                    <option value="No.2ブラウン">No.2&thinsp;ブラウン</option>
-                    <option value="No.3ブラック">No.3&thinsp;ブラック</option>
-                    <option value="No.4ダークブラウン">No.4&thinsp;ダークブラウン</option>
-                    <option value="No.5グリーン">No.5&thinsp;グリーン</option>
-                    <option value="No.6ベージュ">No.6&thinsp;ベージュ</option>
-                    <option value="No.7レンガ">No.7&thinsp;レンガ</option>
-                    <option value="No.8ターコイズ">No.8&thinsp;ターコイズ</option>
+                    <option value="" disabled selected>Please select</option>
+                    <option value="No.1アイボリー">No.1&thinsp; Ivory</option>
+                    <option value="No.2ブラウン">No.2&thinsp; Brown</option>
+                    <option value="No.3ブラック">No.3&thinsp; Black</option>
+                    <option value="No.4ダークブラウン">No.4&thinsp; Dark Brown</option>
+                    <option value="No.5グリーン">No.5&thinsp; Green</option>
+                    <option value="No.6ベージュ">No.6&thinsp; Beige</option>
+                    <option value="No.7レンガ">No.7&thinsp; Brick</option>
+                    <option value="No.8ターコイズ">No.8&thinsp; Turquoise</option>
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="kanagu_hook">*金具（&thinsp;キーフック&thinsp;）</label>
+                <label class="Home_Contact_Label__hwNpu" for="kanagu_hook">*Hardware（&thinsp;Key hook&thinsp;）</label>
                 <select name="kanagu_hook" class="form-control" required="required">
-                    <option value="" disabled selected>選択してください</option>
-                    <option value="ゴールド">ゴールド</option>
-                    <option value="シルバー">シルバー</option>
-                    <option value="アンティーク">アンティーク</option>
+                    <option value="" disabled selected>Please select</option>
+                    <option value="ゴールド">Gold</option>
+                    <option value="シルバー">Silver</option>
+                    <option value="アンティーク">Antique</option>
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="kokuin">*刻印模様 (&thinsp;希望の方 配置:右ポケット&thinsp;)</label>
+                <label class="Home_Contact_Label__hwNpu" for="kokuin">*Engraving Pattern(&thinsp;For those who prefer, the placement is on the right pocket.&thinsp;)</label>
                 <select name="kokuin" class="form-control" required="required" >
-                    <option value="" disabled selected>選択してください</option>
-                    <option value="有り">有り</option>
-                    <option value="無し">無し</option>
+                    <option value="" disabled selected>Please select</option>
+                    <option value="有り">Necessary</option>
+                    <option value="無し">Unnecessary</option>
                 
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu"  for="message">イニシャル刻印 (&thinsp;希望の方 配置:右ポケット&thinsp;)</label>
-                <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5"  placeholder="12文字までをご記入ください.大小文字含むA~Z、数字2桁まで(０〜９、同数字不可:例22)、 記号【.＆】のみ"></textarea>
+                <label class="Home_Contact_Label__hwNpu"  for="message">Initial Engraving(&thinsp;For those who prefer, the placement is on the right pocket.&thinsp;)</label>
+                <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5"  placeholder="Please enter up to 12 characters. Uppercase and lowercase letters (A-Z), up to 2 digits (0-9, no repeating digits, e.g., 22 not allowed), and symbols [.&] only."></textarea>
 
-                <button type="submit" class="Home_Contact_Button__sfQX_">送信する</button>
+                <button type="submit" class="Home_Contact_Button__sfQX_">Submit</button>
             </form>
             <br>
             <p class="recaptcha_policy">This site is protected by reCAPTCHA and the Google<a href="https://policies.google.com/privacy" target="_blank">Privacy Policy</a> and <a href="https://policies.google.com/terms" target="_blank">Terms of Service</a> apply.</p>
@@ -194,7 +193,7 @@
         }
       
         async function sendRequest(formData: FormData) {
-          return await fetch('https://contact-web.form.newt.so/v1/GG7K2kLP0', {
+          return await fetch('https://contact-web.form.newt.so/v1/5dF7urNX1', {
             method: 'POST',
             body: formData,
             headers: {
@@ -273,7 +272,7 @@
                           -moz-osx-font-smoothing: grayscale;
                        -webkit-font-smoothing: antialiased;
                        text-rendering: optimizeLegibility;
-                       font-family: 'Shippori Mincho', sans-serif;
+                       font-family: 'Open Sans Variable', sans-serif;
                 
                       }
                       
@@ -304,8 +303,8 @@
                 
                 .bun{
                     line-height: 2;
-                    font-size: 0.9575rem;
-                    font-family: "Shippori Mincho", sans-serif;
+                    font-size: 1rem;
+                    font-family: 'Open Sans Variable', sans-serif;
                 
                 }
                 
@@ -319,8 +318,8 @@
                   }
                 
                   .bun[data-astro-cid-ekziid7k] p[data-astro-cid-ekziid7k]{
-                    font-size: 0.975rem;
-                    font-family: "Shippori Mincho B1",serif;
+                    font-size: 1rem;
+                    font-family: 'Open Sans Variable', sans-serif;
                     line-height: 2.3076923077;
                     letter-spacing: .05em;
                 
@@ -354,9 +353,29 @@
                     padding: 0;
                     
                     box-sizing: border-box;
-                    font-family: 'Shippori Mincho', sans-serif;
+                    font-family: 'Open Sans Variable', sans-serif;
                 
                 }
+
+                html {
+                    line-height: 1.65em;
+                          -webkit-text-size-adjust: 100%;
+                          -webkit-tap-highlight-color: transparent
+                      }
+                      
+                      body {
+                          margin: 0;
+                          padding: 0;
+                          color: #333;
+                          -moz-osx-font-smoothing: grayscale;
+                       -webkit-font-smoothing: antialiased;
+                       text-rendering: optimizeLegibility;
+                       box-sizing: border-box;
+                       font-family: 'Open Sans Variable', sans-serif;
+                
+                      }
+
+              
                 
                 .container {
                     display: flex;
@@ -538,7 +557,8 @@
                 
                   letter-spacing: 0.12em;
                     position: relative;
-                    line-height: 1.5;
+                    line-height: 1.65em;
+                    letter-spacing: .065px;
                     margin: 0 0 4px;
                     
                     padding: 0;
@@ -628,8 +648,9 @@
                 
                 .Home_Contact_Text__3D7zy {
                     font-size: 0.9575rem;   
-                     line-height: 1.5;
-                     font-family: "Shippori Mincho", sans-serif;
+                    line-height: 1.65em;
+                    letter-spacing: .065px;
+                     font-family: 'Open Sans Variable', sans-serif;
                      margin: 0 0 48px;
                     padding: 0;
                   text-align: center;
@@ -665,4 +686,6 @@
                     }
                 }
                 
+
+       
                 </style>
