--- a/src/pages/roundwallet1.astro
+++ b/src/pages/roundwallet1.astro
@@ -5,7 +5,7 @@ import { ViewTransitions } from 'astro:transitions';
 ---
 <ViewTransitions />
 
-<Layout title="ラウンドウォレットについて">
+<Layout title="ラウンドウォレット（ミニマム向け）について">
   <main>
      
 
