--- a/src/layouts/Layout17.astro
+++ b/src/layouts/Layout17.astro
@@ -31,7 +31,7 @@ import '@fontsource/shippori-mincho';
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		
-		<title>RHODIAカバー</title>
+		<title>ファスナーウォレット</title>
 		<meta name="description" content="RHODIAカバーについて" />
 		<meta name="format-detection" content="telephone=no" />
         <meta name="googlebot" content="noindex">
