--- a/src/layouts/Pattern3order.astro
+++ b/src/layouts/Pattern3order.astro
@@ -9,9 +9,9 @@ const { title,description,image } = Astro.props;
 
 import Header from "../components/Header.astro";
 
-import Productlist2 from "../components/Productlist2.astro";
-import Back from "../components/Back.astro";
+import Pa3order from "../components/Pa3order.astro";
 
+import Back from "../components/Back.astro";
 import Footer from "../components/Footer.astro";
 
 
@@ -31,8 +31,8 @@ import '@fontsource/shippori-mincho';
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		
-		<title>商品リスト２ページ目</title>
-		<meta name="description" content="商品リスト２ページ目" />
+		<title>オーダー キーケース（フックタイプ）</title>
+		<meta name="description" content="オーダー ミニマムウォレット" />
 		<meta name="format-detection" content="telephone=no" />
         <meta name="googlebot" content="noindex">
         <meta name="robots" content="noindex,nofollow" />
@@ -48,9 +48,9 @@ import '@fontsource/shippori-mincho';
 
         <Header />
 
-        <Productlist2 />
-		<Back />
+        <Pa3order />		
 
+		<Back />
 		<Footer />
 		<slot />
 	</body>
